# RiskyRag

./: .gitignore  CLAUDE.md  PRD-v2.md  PRD.md  README.md  ROADMAP.md
.claude/skills/react-architect/: COMPONENT_TEMPLATE.md  DATA_FLOW.md  SKILL.md  VIEW_MAP.md
.claude/skills/ui-ux-design/: SKILL.md  components.md  design-system.md
preview/: 01-game-board.txt  02-ai-negotiation.txt  03-tool-usage-dashboard.txt  04-historical-query.txt  05-scenario-selection.txt  06-benchmark-results.txt  README.md
riskyrag/: .cta.json  .env.example  README.md  TOURNAMENT_STATUS.md  package-lock.json  package.json  vitest.config.ts  wrangler.jsonc
riskyrag/.vercel/: project.json
riskyrag/benchmarks/: README.md  config.ts  runner.ts
riskyrag/convex/: .env.example  agent.ts  agentNotes.ts  agentStreaming.ts  benchmarks.ts  evals.test.ts  evals.ts  gameLog.ts  games.ts  negotiations.ts  players.ts  rag.ts  scenarios.ts  schema.ts  seed.ts  territories.ts  test.setup.ts  tournament.ts  tournamentInit.ts
riskyrag/docs/: EVALS.md  EVALS_IMPLEMENTATION.md  MAP_DESIGN.md
riskyrag/src/: styles.css
scraper/: .env.example  README.md  Sources for RiskyRag.txt  pyproject.toml
scraper/src/riskyrag/: __init__.py  cli.py
scraper/src/riskyrag/core/: __init__.py  registry.py  types.py
scraper/src/riskyrag/processors/: __init__.py  chunking.py  embeddings.py  llm_filter.py  pipeline.py
scraper/src/riskyrag/scrapers/: __init__.py  acw_battles.py  base.py  civil_war.py  constantinople.py  deremilitari.py  loc.py  wikidata.py  wikipedia.py  wikipedia_civil_war.py
(+80 files in other folders)
